--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    /* border: 1px solid grey; */
 }
 body {
     font-size: 12px;
@@ -11,12 +12,18 @@ header {
     text-align: center;
 }
 main {
-    display: grid;
-    grid-template-columns: 1fr 1.5fr;
+    display: flex;
+    flex-wrap: wrap;
 }
 main .container {
     padding: 10px;
     box-sizing: border-box;
+}
+.container:nth-child(1){
+    flex-grow: 1;
+}
+.container:nth-child(2){
+    flex-grow: 2;
 }
 main .container h2 {
     margin: .5rem 0;
@@ -25,7 +32,8 @@ main .container h2 {
 main form {
     row-gap: 5px;
     display: grid;
-    font-size: 1.5rem;
+    flex-grow: 1;
+    font-size: 1.2rem;
 }
 main form input {
     height: 2rem;
@@ -37,4 +45,24 @@ label[for="complete"] {
 }
 main form input[type="checkbox"] {
     height: .5rem;
+}
+#allbook {
+    display: flex;
+    row-gap: 10px;
+    flex-direction: column;
+}
+#allbook section {
+    font-size: 1.1rem;
+}
+
+#allbook section h6, p{
+    color: grey;
+}
+.span {
+    padding: 5px;
+    color: yellow;
+    border-radius: 5px;
+    text-align: center;
+    display: inline-block;
+    background-color: aqua;
 }
